# Benchmark-Inference-Engine

./: .gitignore  .gitmodules  LICENSE  README.md  test_ort.py
Android/: Android.sln
Android/Android/: Android.csproj  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs
Android/Inference/: Class1.cs  Inference.csproj
Android/ONNX/: MauiApp1.sln
Android/ONNX/MauiApp1/: App.xaml  App.xaml.cs  MainPage.xaml.cs  MauiApp1.csproj  MauiProgram.cs
Android/TFLite/: gradle.properties
Android/TFLite/app/: build.gradle  download_models.gradle
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
arm64/: configure.sh  onnxruntime.py  test_ort.py  test_tflite.py
arm64/ncnn/: .gitignore  CMakeLists.txt  Makefile.mk  main.cpp
arm64/tvm/: autotvm.py
neural_model/: acltuner_graph.py  acltuner_log_parser.py  alexnet.py  all_render.py  ansor_tvm_graph.py  create_bert_squad.ipynb  custom_models.py  googlenet.py  keras2tflite.py  onnx2ncnn.sh  onnx2tflite.py  onnx2tflite_openvino.py  onnx_data_reader.py  onnx_download.sh  pytorch_download.py  test_model_based_resnet50.ipynb  tfmodel.py
neural_model/ncnn/: alexnet.table  googlenet.table  imagelist.txt  list.txt  mobilenet.table  onnx2ncnn.sh  vgg16.table
(+5 files in other folders)
